<resources>
    <string name="app_name">Chocolapp</string>
    <string name="title_home">Vendas</string>
    <string name="title_candies">Doces</string>
    <string name="title_history">Histórico</string>
    <string name="home_sells">Vendas</string>
    <string name="Cash">Dinheiro</string>
    <string name="Card">Cartão</string>
    <string name="candy_details_title">Detalhes</string>
    <string name="candy_name_lbl">Nome</string>
    <string name="candy_type_lbl">Tipo</string>
    <string name="candy_price">Preço</string>
    <string name="candy_description">Descrição</string>
    <string name="save_btn">Salvar</string>
    <string name="remaining">Restantes</string>
    <string name="done">Feito</string>
    <string name="add_showcase_item">Novo item de estoque</string>
</resources>
